// Copyright (C) 2024 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package perfetto.protos.test;

import "protos/perfetto/proto_filtering/proto_filter_options.proto";

// Test message with semantic_type annotation.
message SemanticTypeTest {
  optional string name = 1
      [(perfetto.protos.proto_filter).semantic_type = SEMANTIC_TYPE_ATRACE];
}

// Test message with filter_string annotation.
message FilterStringTest {
  optional string description = 1
      [(perfetto.protos.proto_filter).filter_string = true];
}

// Test message with passthrough annotation.
message PassthroughTest {
  optional Nested config = 1
      [(perfetto.protos.proto_filter).passthrough = true];

  message Nested {
    optional int32 value = 1;
  }
}

// Test message with add_to_v2 annotation.
message AddToV2Test {
  optional string name = 1 [(perfetto.protos.proto_filter) = {
    semantic_type: SEMANTIC_TYPE_ATRACE
    add_to_v2: true
  }];
}

// Test message with semantic_type but without add_to_v2.
message SemanticTypeWithoutAddToV2Test {
  optional string name = 1
      [(perfetto.protos.proto_filter).semantic_type = SEMANTIC_TYPE_ATRACE];
}

// Combined test with multiple annotation types.
message CombinedTest {
  optional string atrace_name = 1 [(perfetto.protos.proto_filter) = {
    semantic_type: SEMANTIC_TYPE_ATRACE
    add_to_v2: true
  }];
  optional string job_name = 2
      [(perfetto.protos.proto_filter).semantic_type = SEMANTIC_TYPE_JOB];
  optional string filtered = 3
      [(perfetto.protos.proto_filter).filter_string = true];
  optional Nested config = 4
      [(perfetto.protos.proto_filter).passthrough = true];
  optional int32 simple = 5;

  message Nested {
    optional int32 value = 1;
  }
}

// ============================================================================
// Messages for MessageFilterTest.Passthrough
// ============================================================================

message PassthroughSubConfig {
  optional string f4 = 6;
}

message PassthroughTraceConfig {
  optional int64 f1 = 3;
  optional string f2 = 4;
  optional PassthroughSubConfig f3 = 5;
}

message PassthroughTracePacket {
  optional int64 timestamp = 1;
  optional PassthroughTraceConfig cfg = 2
      [(perfetto.protos.proto_filter).passthrough = true];
  optional PassthroughTraceConfig cfg_filtered = 3;
  optional string other = 4 [(perfetto.protos.proto_filter).passthrough = true];
}

// ============================================================================
// Messages for MessageFilterTest.StringFilter
// ============================================================================

message StringFilterTraceConfig {
  optional string f2 = 1 [(perfetto.protos.proto_filter).filter_string = true];
}

message StringFilterTracePacket {
  optional StringFilterTraceConfig cfg = 1;
}

// ============================================================================
// Messages for MessageFilterTest.SemanticTypeEndToEnd
// ============================================================================

message SemanticTypeTracePacket {
  optional string atrace_name = 2
      [(perfetto.protos.proto_filter).semantic_type = SEMANTIC_TYPE_ATRACE];
  optional string category = 3
      [(perfetto.protos.proto_filter).semantic_type = SEMANTIC_TYPE_JOB];
}

message SemanticTypeRoot {
  optional SemanticTypeTracePacket packet = 1;
}
